new proj/src/objects/GE_OG_Key_Player__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_Chatter_Link__c</fullName>
        <label>Chatter Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_OG_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>GE OG Key Players</relationshipLabel>
        <relationshipName>GE_OG_Key_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Email_Id__c</fullName>
        <description>Oil &amp; Gas Region key players</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_OG_First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Last_Name__c</fullName>
        <description>Last Name of Region Key Player</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_P_L__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>O&amp;G HQ/Region HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SSO_ID__c</fullName>
        <externalId>true</externalId>
        <label>SSO ID</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Txt_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Work_Number_Dial_Comm__c</fullName>
        <label>Work Number (Dial Comm)_Phone Field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_OG_Work_Number_Direct__c</fullName>
        <label>Work Number Direct_Phone_Field</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_OG_Key_Players</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GE OG Key Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KP-{00000}</displayFormat>
        <label>GE_OG_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GE OG Key Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>